feat: patient profile translations and more

--- a/frontend/config-core_demo.json
+++ b/frontend/config-core_demo.json
@@ -1795,6 +1795,102 @@
       }
     }
   },
+  "@openmrs/esm-patient-attachments-app": {
+    "Translation overrides": {
+      "en": {
+        "add": "Qo'shish",
+        "addAnImage": "Rasm qo'shish",
+        "addAttachment": "Ilova qo'shish",
+        "addAttachment_title": "Ilova qo'shish",
+        "addMoreAttachments": "Ko'proq ilovalar qo'shish",
+        "attachments": "Ilovalar",
+        "Attachments": "Ilovalar",
+        "attachmentsInLowerCase": "ilovalar",
+        "attachmentsInProperFormat": "Ilovalar",
+        "cameraAccessErrorMessage": "Brauzer sozlamalarida kamera uchun ruxsat bering va qayta urinib ko'ring.",
+        "cameraError": "Kamera xatosi",
+        "cancel": "Bekor qilish",
+        "chooseAnAllowedFileType": "Fayl \"{{fileName}}\" yuklab bo'lmaydi. Iltimos, quyidagi kengaytmalarga ega fayllardan birini yuklang: {{supportedExtensions}} yoki {{lastExtension}}.",
+        "closeModal": "Yopish",
+        "closePreview": "Oldindan ko'rishni yopish",
+        "dateUploaded": "Yuklangan sana",
+        "delete": "O'chirish",
+        "deleteAttachmentConfirmationText": "Bu {{attachmentType}} ni o'chirishni istaysizmi? Bu amalni bekor qilib bo'lmaydi.",
+        "deleteImage": "Rasmni o'chirish",
+        "deletePdf": "PDF ni o'chirish",
+        "edit": "Tahrirlash",
+        "enterAttachmentDescription": "Ilova tavsifini kiriting",
+        "enterAttachmentName": "Ilova nomini kiriting",
+        "error": "Xato",
+        "failed": "muvaffaqiyatsiz",
+        "failedDeleting": "o'chirib bo'lmadi",
+        "file": "Fayl",
+        "fileDeleted": "Fayl o'chirildi",
+        "fileName": "Fayl nomi",
+        "fileSizeInstructions": "Fayllarni shu yerga sudrab olib keling yoki yuklash uchun bosing",
+        "fileSizeLimitExceeded": "hajm cheklovidan oshib ketdi",
+        "fileSizeLimitExceededText": "Fayl hajmi cheklovidan oshib ketdi",
+        "fileUploadSizeConstraints": "Fayl hajmi {{fileSize}}MB dan oshmasligi kerak",
+        "gridView": "Tarmoq ko'rinishi",
+        "image": "Rasm",
+        "imageDescription": "Rasm tavsifi",
+        "imagePlaceholder": "Rasm uchun joy",
+        "imagePreview": "Rasmni ko'rib chiqish",
+        "name": "Nomi",
+        "nameIsRequired": "Nom kiritilishi shart",
+        "noAttachmentsToDisplay": "Bu bemor uchun ko'rsatadigan ilovalar yo'q",
+        "noImageToDisplay": "Ko'rsatadigan rasm yo'q",
+        "options": "Variantlar",
+        "successfullyDeleted": "muvaffaqiyatli o'chirildi",
+        "supportedFiletypes": "Qo'llab-quvvatlanadigan fayllar: {{supportedFiles}}",
+        "tableView": "Jadval ko'rinishi",
+        "type": "Turi",
+        "unsupportedFileType": "Qo'llab-quvvatlanmaydigan fayl turi",
+        "uploadComplete": "Yuklash tugadi",
+        "uploadedSuccessfully": "muvaffaqiyatli yuklandi",
+        "uploadError": "Faylni yuklashda xato",
+        "uploadFiles": "Fayllarni yuklash",
+        "uploading": "Yuklanmoqda",
+        "uploadWillContinueInTheBackground": "Fayllar fon rejimida yuklanadi. Ushbu oynani yopishingiz mumkin.",
+        "webcam": "Vebkamera"
+      }
+    }
+  },
+  "@openmrs/esm-patient-immunizations-app": {
+    "Translation overrides": {
+      "en": {
+        "add": "Qo'shish",
+        "cancel": "Bekor qilish",
+        "doseNumber": "Seriyadagi doza raqami",
+        "doseNumberWithinSeries": "Seriyadagi doza raqami",
+        "edit": "Tahrirlash",
+        "error": "Xato",
+        "errorSaving": "Vaksinatsiyani saqlashda xato",
+        "expirationDate": "Amal qilish muddati",
+        "goToSummary": "Xulosa sahifasiga o'ting",
+        "immunization": "Immunizatsiya",
+        "immunizations": "Immunizatsiyalar",
+        "Immunizations": "Immunizatsiyalar",
+        "immunizations__lower": "immunizatsiyalar",
+        "immunizationWorkspaceTitle": "Immunizatsiya formasi",
+        "lotNumber": "Lot raqami",
+        "manufacturer": "Ishlab chiqaruvchi",
+        "pleaseSelect": "Tanlang",
+        "recentVaccination": "So'nggi vaksinatsiya",
+        "save": "Saqlash",
+        "seeAll": "Barchasini ko'rish",
+        "sequence": "Ketma-ketlik",
+        "singleDoseOn": "Yakka doza kuni",
+        "time": "Vaqt",
+        "timeFormat ": "Vaqt formati",
+        "vaccinationDate": "Vaksinatsiya sanasi",
+        "vaccinationDateRequired": "Vaksinatsiya sanasi talab qilinadi",
+        "vaccinationSaved": "Vaksinatsiya muvaffaqiyatli saqlandi",
+        "vaccine": "Vaksina",
+        "vaccineRequired": "Vaksina talab qilinadi"
+      }
+    }
+  },
   "core": {
     "Translation overrides": {
       "en": {
