feat: patient chart lab -> esm-openconceptlab-app translation(not the same)

--- a/frontend/config-core_demo.json
+++ b/frontend/config-core_demo.json
@@ -1933,6 +1933,117 @@
       }
     }
   },
+  "@openmrs/esm-openconceptlab-app": {
+    "Translation overrides": {
+      "en": {
+        "add": "Qo'shish",
+        "additionalInstructions": "Qo'shimcha ko'rsatmalar",
+        "addLabOrderWorkspaceTitle": "Laboratoriya buyurtmasini qo'shish",
+        "backToOrderBasket": "Buyurtmalar savatiga qaytish",
+        "backToTimeline": "Vaqt jadvaliga qaytish",
+        "cancel": "Bekor qilish",
+        "checkFilters": "Yuqoridagi filtrlardan foydalaning",
+        "clear": "Tozalash",
+        "clearFilters": "Filtrlarni tozalash",
+        "clearSearchResults": "Natijalarni tozalash",
+        "closeSearchBar": "Qidiruvni yopish",
+        "data": "Ma'lumotlar",
+        "dataLoadError": "Ma'lumotlarni yuklashda xato",
+        "dataTimelineText": "Ma'lumotlar jadvali",
+        "date": "Sana",
+        "dateCollected": "Yig'ilgan sana ko'rsatilmoqda",
+        "dateTime": "Sana va vaqt",
+        "directlyAddToBasket": "Savatga qo'shish",
+        "discard": "Bekor qilish",
+        "endDate": "Tugash sanasi",
+        "error": "Xato",
+        "errorFetchingTestTypes": "\"{{searchTerm}}\" natijalarini olishda xato",
+        "errorLoadingTestTypes": "Test turlarini yuklashda xato yuz berdi",
+        "female": "Ayol",
+        "goToDrugOrderForm": "Buyurtma shakli",
+        "hideResultsTable": "Natijalar jadvalini yashirish",
+        "individualTests": "Alohida testlar",
+        "labOrders": "Laboratoriya buyurtmalari",
+        "labReferenceNumber": "Laboratoriya ma'lumotnoma raqami",
+        "male": "Erkak",
+        "moreResultsAvailable": "Qo'shimcha natijalar mavjud",
+        "noPanelsFound": "Panel topilmadi",
+        "noResultsForTestTypeSearch": "\"{{searchTerm}}\" uchun natijalar topilmadi",
+        "noResultsToDisplay": "Ko'rsatish uchun natijalar yo'q",
+        "noTestResultsWithinSpecifiedRange": "Ko'rsatilgan diapazonda test natijalari topilmadi",
+        "observationsDisplayText": "Kuzatishlar",
+        "onDate": "sanasida",
+        "or": "yoki",
+        "orderActionDiscontinue": "To'xtatish",
+        "orderActionIncomplete": "Tugallanmagan",
+        "orderActionNew": "Yangi",
+        "orderActionRenew": "Yangilash",
+        "orderActionRevise": "O'zgartirish",
+        "ordered": "Buyurtma berilgan",
+        "orderReason": "Buyurtma sababi",
+        "other": "Boshqalar",
+        "overTime": "Vaqt davomida",
+        "panel": "Panel",
+        "panels": "Panellar",
+        "pleaseRequiredFields": "Iltimos, barcha majburiy maydonlarni to'ldiring",
+        "print": "Chop etish",
+        "printedBy": "Chop etuvchi",
+        "printTestResults": "Test natijalarini chop etish",
+        "priority": "Ustuvorlik",
+        "recentResults": "So'nggi natijalar",
+        "recentTestResults": "so'nggi test natijalari",
+        "referenceRange": "Ma'lumotlar diapazoni",
+        "removeFromBasket": "Savatdan olib tashlash",
+        "reset": "Qayta tiklash",
+        "resetTreeText": "Daraxtni qayta tiklash",
+        "resetView": "ushbu ko'rinishni qayta tiklash",
+        "resulted": "Natija chiqarildi",
+        "results": "Natijalar",
+        "Results Viewer": "Natijalarni ko'rish",
+        "resultsText": "natijalar",
+        "returnToOrderBasket": "Buyurtmalar savatiga qaytish",
+        "returnToTimeline": "Vaqt jadvaliga qaytish",
+        "saveOrder": "Buyurtmani saqlash",
+        "search": "Qidiruv",
+        "searchAgain": "Qayta qidirish",
+        "searchByTestName": "Test nomi bo'yicha qidirish",
+        "searchFieldPlaceholder": "Test turini qidiring",
+        "searchResultsMatchesForTerm_one": "\"{{searchTerm}}\" uchun {{count}} natija",
+        "searchResultsMatchesForTerm_other": "\"{{searchTerm}}\" uchun {{count}} natijalar",
+        "searchResultsTextFor_one": "\"{{searchTerm}}\" uchun {{count}} qidiruv natijasi",
+        "searchResultsTextFor_other": "\"{{searchTerm}}\" uchun {{count}} qidiruv natijalari",
+        "seeAllResults": "Barcha natijalarni ko'rish",
+        "showResultsTable": "Natijalar jadvalini ko'rsatish",
+        "showTree": "Daraxtni ko'rsatish",
+        "startDate": "Boshlanish sanasi",
+        "testName": "Test nomi",
+        "testResults": "test natijalari",
+        "testResults_title": "Test natijalari",
+        "testResultsData": "Test natijalari ma'lumotlari",
+        "tests": "Testlar",
+        "testType": "Test turi",
+        "timeline": "Vaqt jadvali",
+        "tree": "Daraxt",
+        "trend": "Trend",
+        "trendline": "Trend chizig'i",
+        "trendlineRangeSelector1Day": "1 kun",
+        "trendlineRangeSelector1Month": "1 oy",
+        "trendlineRangeSelector1Year": "1 yil",
+        "trendlineRangeSelector5Days": "5 kun",
+        "trendlineRangeSelector5Years": "5 yil",
+        "trendlineRangeSelectorAll": "Hammasi",
+        "trendlineRangeSelectorMonths": "6 oy",
+        "tryReopeningTheForm": "Iltimos, shaklni qaytadan ochib ko'ring",
+        "trySearchingAgain": "Iltimos, qayta qidirib ko'ring",
+        "tryTo": "Urinib ko'ring",
+        "unknown": "Noma'lum",
+        "usingADifferentTerm": "boshqa terminlardan foydalanib",
+        "value": "Qiymat",
+        "view": "Ko'rish",
+        "viewTimeline": "Vaqt jadvalini ko'rish"
+      }
+    }
+  },
   "core": {
     "Translation overrides": {
       "en": {
