csv conf and lab translations

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -39,5 +39,8 @@ COPY --from=dev /app/spa /usr/share/nginx/html
 COPY config-core_demo.json /usr/share/nginx/html
 COPY src/main/resources/logo.png /usr/share/nginx/html
 COPY src/main/resources/login-logo.png /usr/share/nginx/html
+COPY src/main/resources/patient-chart-logo.png /usr/share/nginx/html
+COPY src/main/resources/favicon.ico /usr/share/nginx/html
+
 
 CMD ["/usr/local/bin/startup.sh"]
