renaming locations to uzbek and translating wards section

--- a/frontend/config-core_demo.json
+++ b/frontend/config-core_demo.json
@@ -2617,6 +2617,119 @@
       }
     }
   },
+  "@openmrs/esm-ward-app": {
+    "Translation overrides": {
+      "en": {
+        "admissionRequestCancelled": "Qabul qilish so'rovi bekor qilindi.",
+        "admissionRequests": "Qabul qilish so'rovlari",
+        "admissionRequestsCount_one": "{{count}} ta qabul qilish so'rovi",
+        "admissionRequestsCount_other": "{{count}} ta qabul qilish so'rovlari",
+        "admit": "Qabul qilish",
+        "admitPatient": "Bemorni qabul qilish",
+        "admitting": "Qabul qilinmoqda...",
+        "backToSearchResults": "Qidiruv natijalariga qaytish",
+        "bedShare": "Karavotni baham ko'rish",
+        "bedSwap": "Karavotni almashtirish",
+        "cancel": "Bekor qilish",
+        "cancelAdmissionRequest": "Qabul qilish so'rovini bekor qilish",
+        "capacity": "Sig'im",
+        "capacityMetricValue": "{{ metricValue }} %",
+        "chooseAnOption": "Variantni tanlang",
+        "clinicalForms": "Klinik formalar",
+        "clinicalNoteLabel": "Eslatmalaringizni yozing",
+        "clinicalNotes": "Klinik eslatmalar",
+        "countItems_one": "{{count}} ta {{item}}",
+        "countItems_other": "{{count}} ta {{item}}",
+        "discharge": "Chiqarish",
+        "emptyBed": "Bo'sh karavot",
+        "emptyText": "Bo'sh",
+        "encounterDisplay": "{{encounterType}} {{encounterDate}}",
+        "Error cancelling admission request": "Qabul qilish so'rovini bekor qilishda xato",
+        "errorChangingPatientBedAssignment": "Bemorning karavotini o'zgartirishda xato",
+        "errorConfiguringPatientCard": "Bemor kartasini sozlashda xato",
+        "errorConfiguringPatientCardMessage": "{{elementType}} uchun sozlama topilmadi, id: {{id}}",
+        "errorCreatingEncounter": "Bemorni qabul qilish muvaffaqiyatsiz tugadi",
+        "errorCreatingTransferRequest": "Ko'chirish so'rovini yaratishda xato",
+        "errorDischargingPatient": "Bemorni chiqarishda xato",
+        "errorLoadingBedDetails": "Karavot tafsilotlarini yuklashda xato",
+        "errorLoadingChildren": "Bolalar ma'lumotlarini yuklashda xato",
+        "errorLoadingMother": "Ona ma'lumotlarini yuklashda xato",
+        "errorLoadingPatientAdmissionRequests": "Bemorning qabul qilish so'rovlarini yuklashda xato",
+        "errorLoadingPatientInfo": "Bemor ma'lumotlarini yuklashda xato",
+        "errorLoadingPatients": "Qabul qilingan bemorlarni yuklashda xato",
+        "errorLoadingWardLocation": "Palata joylashuvini yuklashda xato",
+        "female": "Ayol",
+        "fetchingEmrConfigurationFailed": "EMR sozlamalarini yuklash muvaffaqiyatsiz tugadi. Sahifani yangilashga urinib ko'ring yoki tizim ma'muriga murojaat qiling.",
+        "fetchingPatientNotesFailed": "Bemor eslatmalarini yuklash muvaffaqiyatsiz tugadi. Sahifani yangilashga urinib ko'ring yoki tizim ma'muriga murojaat qiling.",
+        "freeBeds": "Bo'sh karavotlar",
+        "freeBedsMetricValue": "{{ metricValue }}",
+        "inpatientNotesWorkspaceTitle": "Statsionar bemor eslatmalari",
+        "invalidLocationSpecified": "Noto'g'ri joylashuv ko'rsatilgan",
+        "invalidWardLocation": "Noto'g'ri palata joylashuvi: {{location}}",
+        "male": "Erkak",
+        "manage": "Boshqarish",
+        "motherChildBedShare": "Ona / Bola",
+        "nextPage": "Keyingi sahifa",
+        "noBed": "Karavot yo'q",
+        "noBedsConfigured": "Ushbu joylashuv uchun karavotlar sozlanmagan",
+        "noBedsConfiguredForLocation": "{{location}} joylashuvi uchun karavotlar sozlanmagan",
+        "noLocationsFound": "Joylashuvlar topilmadi",
+        "noPendingPatientRequests": "Kutilayotgan bemor so'rovlari yo'q",
+        "note": "Eslatma",
+        "notes": "Eslatmalar",
+        "notesRequiredForCancellingRequest": "Qabul qilish yoki ko'chirish so'rovini bekor qilish uchun eslatmalar talab qilinadi",
+        "Orders": "Buyurtmalar",
+        "other": "Boshqa",
+        "patientAdmittedButBedNotAssigned": "Bemor muvaffaqiyatli qabul qilindi, lekin karavotga tayinlash muvaffaqiyatsiz tugadi",
+        "patientAdmittedSuccessfully": "Bemor muvaffaqiyatli qabul qilindi",
+        "patientAdmittedSuccessfullySubtitle": "{{patientName}} muvaffaqiyatli qabul qilindi va {{bedNumber}} karavotiga tayinlandi",
+        "patientAdmittedWoBed": "Bemor {{location}} ga muvaffaqiyatli qabul qilindi",
+        "patientAlreadyAdmittedToCurrentLocation": "Bemor allaqachon joriy joylashuvga qabul qilingan",
+        "patientAssignedNewBed": "Bemor yangi karavotga tayinlandi",
+        "patientAssignedNewBedDetail": "{{patientName}} {{bedNumber}} karavotiga tayinlandi",
+        "patientCurrentlyAdmittedToOtherLocation": "Bemor hozirda {{location}} joylashuviga qabul qilingan",
+        "patienthasNoActiveVisit": "Bemorning faol tashrifi yo'q",
+        "patientHasPendingAdmissionRequest": "Bemorda {{location}} joylashuviga qabul qilish so'rovi kutilmoqda",
+        "patientNoteNowVisible": "Endi u eslatmalar tarixida ko'rinishi kerak",
+        "patientNoteSaveError": "Bemor eslatmasini saqlashda xato",
+        "patientNotesDidntLoad": "Bemor eslatmalari yuklanmadi",
+        "patients": "Bemorlar",
+        "patientsMetricValue": "{{ metricValue }}",
+        "patientTransferRequestCreated": "Bemor ko'chirish so'rovi yaratildi",
+        "patientUnassignedFromBed": "Bemor karavotdan olib tashlandi",
+        "patientUnassignedFromBedDetail": "{{patientName}} endi karavotdan olib tashlandi",
+        "patientWasDischarged": "Bemor chiqarildi",
+        "pendingOut": "Chiqish kutilmoqda",
+        "pendingOutMetricValue": "{{ metricValue }}",
+        "pleaseSelectBed": "Iltimos, karavotni tanlang",
+        "pleaseSelectTransferLocation": "Iltimos, ko'chirish joylashuvini tanlang",
+        "pleaseSelectTransferType": "Iltimos, ko'chirish turini tanlang",
+        "previousPage": "Oldingi sahifa",
+        "proceedWithPatientDischarge": "Bemorni chiqarishni davom ettirish",
+        "save": "Saqlash",
+        "saving": "Saqlanmoqda...",
+        "searchLocations": "Joylashuvlarni qidirish",
+        "selectABed": "Karavotni tanlang",
+        "selectALocation": "Joylashuvni tanlang",
+        "showingLocations_one": "{{start}}-{{end}} / {{count}} ta joylashuv",
+        "showingLocations_other": "{{start}}-{{end}} / {{count}} ta joylashuvlar",
+        "somePartsOfTheFormDidntLoad": "Formaning ba'zi qismlari yuklanmadi",
+        "transfer": "Ko'chirish",
+        "transferElsewhere": "Boshqa joyga ko'chirish",
+        "transferPatient": "Bemorni ko'chirish",
+        "transferRequest": "Ko'chirish so'rovi",
+        "transfers": "Ko'chirishlar",
+        "transferType": "Ko'chirish turi",
+        "typeOfTransfer": "Ko'chirish turi",
+        "unableToTransferPatient": "Bemorni ko'chirish imkoni yo'q",
+        "unableToTransferPatientNotYetAdmitted": "Ushbu bemor hali bu palataga qabul qilinmagan. Bemorni boshqa joyga ko'chirishdan oldin uni qabul qiling.",
+        "unknown": "Noma'lum",
+        "visitNoteSaved": "Bemor eslatmasi saqlandi",
+        "wardClinicalNotePlaceholder": "Har qanday eslatmalarni shu yerga yozing",
+        "wards": "Palatalar"
+      }
+    }
+  },
   "core": {
     "Translation overrides": {
       "en": {
