feat: .tgz pack files added: login, banner, attachment, medications, orders, tests, vitals

--- a/frontend/config-core_demo.json
+++ b/frontend/config-core_demo.json
@@ -2,7 +2,7 @@
   "@openmrs/esm-home-app": {
     "extensionSlots": {
       "homepage-dashboard-slot": {
-        "remove": []
+        "add": ["dispensing-dashboard-link"]
       }
     },
     "Translation overrides": {
@@ -526,18 +526,21 @@
     "extensionSlots": {
       "user-panel-slot": {
         "remove": ["change-language"]
+      },
+      "top-nav-actions-slot": {
+        "remove": ["implementer-tools-button"]
       }
-    },
-    "Translation overrides": {
-      "en": {
-        "AppMenuTooltip": "Ilova menyusi",
-        "cancel": "Bekor qilish",
-        "change": "O'zgartirish",
-        "changeLanguage": "Tilni o'zgartirish",
-        "changingLanguage": "Til o'zgartirilmoqda",
-        "notifications": "Bildirishnomalar",
-        "userMenuTooltip": "Mening hisobim"
-      }
+    }
+  },
+  "Translation overrides": {
+    "en": {
+      "AppMenuTooltip": "Ilova menyusi",
+      "cancel": "Bekor qilish",
+      "change": "O'zgartirish",
+      "changeLanguage": "Tilni o'zgartirish",
+      "changingLanguage": "Til o'zgartirilmoqda",
+      "notifications": "Bildirishnomalar",
+      "userMenuTooltip": "Mening hisobim"
     }
   },
   "@openmrs/esm-patient-registration-app": {
@@ -2154,7 +2157,7 @@
         "dispensedBy": "Kim tomonidan berilgan",
         "dispensedMedication": "berilgan dori",
         "dispensePrescription": "Retseptni berish",
-        "dispensing": "Berish jarayoni",
+        "dispensing": "Retseptlar",
         "dispensingAppError": "Berish ilovasi xatosi",
         "dispensingAppMisconfigurationMessage": "Tizim administratori bilan bog'laning: Noto'g'ri sozlama - 'restrictTotalQuantityDispensed' parametri 'allowModifyingPrescription' yoqilgan bo'lsa, yoqib bo'lmaydi.",
         "dose": "Doza",
@@ -2543,6 +2546,206 @@
   "@openmrs/___": {
     "Translation overrides": {
       "en": {}
+    }
+  },
+  "@openmrs/esm-bed-management-app": {
+    "Translation overrides": {
+      "en": {
+        "actions": "Harakatlar",
+        "addBed": "To'shak qo'shish",
+        "addBedTag": "To'shak yorlig'i yaratish",
+        "addBedType": "To'shak turini qo'shish",
+        "allocationStatus": "Ajratilgan",
+        "bedColumn": "To'shak ustuni",
+        "bedId": "To'shak ID",
+        "bedLocation": "Manzil",
+        "bedManagement": "To'shak boshqaruvi",
+        "bedManagementLeftPanel": "To'shak boshqaruvi chap paneli",
+        "bedName": "To'shak nomi",
+        "bedNumber": "To'shak raqami",
+        "bedRow": "To'shak qatori",
+        "beds": "To'shaklar",
+        "bedTagCreated": "To'shak yorlig'i yaratildi",
+        "bedTagCreatedSuccessfully": "",
+        "bedTagPlaceholder": "",
+        "bedTags": "To'shak yorliqlari",
+        "bedTagUpdated": "To'shak yorlig'i yangilandi",
+        "bedTagUpdatedSuccessfully": "",
+        "bedTypeCreated": "To'shak turi yaratildi",
+        "bedTypeCreatedSuccessfully": "",
+        "bedTypePlaceholder": "",
+        "bedTypes": "To'shak turlari",
+        "bedTypeUpdated": "To'shak turi yangilandi",
+        "bedTypeUpdatedSuccessfully": "",
+        "bedUpdated": "To'shak yangilandi",
+        "bedUpdatedSuccessfully": "",
+        "checkFilters": "Yuqoridagi filtrlarni tekshiring",
+        "chooseBedtype": "To'shak turini tanlang",
+        "chooseOccupiedStatus": "Bandlik holatini tanlang",
+        "createBedTag": "To'shak yorlig'i yaratish",
+        "createBedType": "To'shak turini yaratish",
+        "createNewBed": "Yangi to'shak yaratish",
+        "description": "Tavsif",
+        "displayName": "Ko'rsatiladigan nom",
+        "displayNamePlaceholder": "",
+        "editBed": "To'shakni tahrirlash",
+        "editBedTag": "To'shak yorlig'ini tahrirlash",
+        "editBedType": "To'shak turini tahrirlash",
+        "editTag": "Yorliqni tahrirlash",
+        "enterBedDescription": "To'shak tavsifini kiriting",
+        "enterBedNumber": "masalan, BMW-201",
+        "error": "Xato",
+        "errorCreatingBedTag": "To'shak yorlig'ini yaratishda xato",
+        "errorCreatingForm": "To'shak yaratishda xato",
+        "errorFetchingbedInformation": "To'shak ma'lumotlarini olishda xato",
+        "filterByOccupancyStatus": "Bandlik holati bo'yicha filtrlash",
+        "id": "ID",
+        "ids": "Id",
+        "invalidBedId": "To'shak ID bo'sh bo'lishi mumkin emas",
+        "invalidBedType": "Iltimos, to'g'ri to'shak turini tanlang",
+        "invalidLocation": "Iltimos, to'g'ri manzilni tanlang",
+        "invalidNumber": "Iltimos, to'g'ri raqam kiriting",
+        "invalidOccupancyStatus": "Iltimos, to'g'ri bandlik holatini tanlang",
+        "itemsPerPage": "Sahifadagi elementlar:",
+        "loading": "Yuklanmoqda...",
+        "location": "Manzil",
+        "manageBeds": "To'shaklarni boshqarish",
+        "name": "Nomi",
+        "newBedCreated": "Yangi to'shak yaratildi",
+        "nextPage": "Keyingi sahifa",
+        "no": "Yo'q",
+        "No data": "Ko'rsatish uchun ma'lumot yo'q",
+        "noDataToDisplay": "Ko'rsatish uchun ma'lumot yo'q",
+        "number": "Raqam",
+        "occupancyStatus": "Bandlik holati",
+        "occupancyStatusAvailable": "Mavjud",
+        "occupancyStatusOccupied": "Band",
+        "occupied": "Band",
+        "or": "yoki",
+        "pageNumber": "Sahifa raqami",
+        "pleaseFillField": "",
+        "previousPage": "Oldingi sahifa",
+        "required": "Majburiy",
+        "returnToSummary": "Xulosaga qaytish",
+        "save": "Saqlash",
+        "selectBedLocation": "To'shak manzilini tanlang",
+        "summary": "Xulosa",
+        "type": "Turi",
+        "viewBeds": "To'shaklarni ko'rish",
+        "wardAllocation": "Palata ajratish",
+        "yes": "Ha"
+      }
+    }
+  },
+  "@openmrs/esm-patient-labs-app": {
+    "Translation overrides": {
+      "en": {
+        "add": "Qo'shish",
+        "additionalInstructions": "Qo'shimcha ko'rsatmalar",
+        "addLabOrderWorkspaceTitle": "Lab buyurtma qo'shish",
+        "backToOrderBasket": "Buyurtma savatiga qaytish",
+        "backToTimeline": "Vaqt jadvaliga qaytish",
+        "cancel": "Bekor qilish",
+        "checkFilters": "Yuqoridagi filtrlarni tekshiring",
+        "clear": "Tozalash",
+        "clearFilters": "Filtrlarni tozalash",
+        "clearSearchResults": "Natijalarni tozalash",
+        "closeSearchBar": "Qidiruvni yopish",
+        "data": "ma'lumot",
+        "dataLoadError": "Ma'lumot yuklash xatosi",
+        "dataTimelineText": "Ma'lumotlar vaqti",
+        "date": "Sana",
+        "dateCollected": "Yig'ilgan sana ko'rsatilmoqda",
+        "dateTime": "Sana va vaqt",
+        "directlyAddToBasket": "Savatga qo'shish",
+        "discard": "Bekor qilish",
+        "endDate": "Tugash sanasi",
+        "error": "Xato",
+        "errorFetchingTestTypes": "\"{{searchTerm}}\" uchun natijalarni olishda xato",
+        "errorLoadingTestTypes": "Test turlarini yuklashda xato yuz berdi",
+        "female": "Ayol",
+        "goToDrugOrderForm": "Buyurtma shakli",
+        "hideResultsTable": "Natijalar jadvalini yashirish",
+        "individualTests": "Individual testlar",
+        "labOrders": "Lab buyurtmalari",
+        "labReferenceNumber": "Lab havola raqami",
+        "male": "Erkak",
+        "moreResultsAvailable": "Ko'proq natijalar mavjud",
+        "noPanelsFound": "Hech qanday panel topilmadi",
+        "noResultsForTestTypeSearch": "\"{{searchTerm}}\" uchun ko'rsatish uchun natijalar yo'q",
+        "noResultsToDisplay": "Ko'rsatish uchun natijalar yo'q",
+        "noTestResultsWithinSpecifiedRange": "Belgilangan oralig'ida test natijalari topilmadi",
+        "observationsDisplayText": "kuzatuvlar",
+        "onDate": "sana",
+        "or": "yoki",
+        "orderActionDiscontinue": "To'xtatish",
+        "orderActionIncomplete": "To'liq emas",
+        "orderActionNew": "Yangi",
+        "orderActionRenew": "Yangilash",
+        "orderActionRevise": "O'zgartirish",
+        "ordered": "Buyurtma qilingan",
+        "orderReason": "Buyurtma sababi",
+        "other": "Boshqa",
+        "overTime": "Vaqt o'tishi bilan",
+        "panel": "Panel",
+        "panels": "panellar",
+        "pleaseRequiredFields": "Iltimos, barcha majburiy maydonlarni to'ldiring",
+        "print": "Chop etish",
+        "printedBy": "Tomonidan chop etilgan",
+        "printTestResults": "Test natijalarini chop etish",
+        "priority": "Ustuvorlik",
+        "recentResults": "So'nggi natijalar",
+        "recentTestResults": "so'nggi test natijalari",
+        "referenceRange": "Havola oralig'i",
+        "removeFromBasket": "Savatdan olib tashlash",
+        "reset": "Qayta o'rnatish",
+        "resetTreeText": "Daraxtni qayta o'rnatish",
+        "resetView": "ushbu ko'rinishni qayta o'rnatish",
+        "resulted": "Natija",
+        "results": "Natijalar",
+        "Results Viewer": "Natijalar ko'ruvchisi",
+        "resultsText": "natijalar",
+        "returnToOrderBasket": "Buyurtma savatiga qaytish",
+        "returnToTimeline": "Vaqt jadvaliga qaytish",
+        "saveOrder": "Buyurtmani saqlash",
+        "search": "Qidirish",
+        "searchAgain": "qayta qidirish",
+        "searchByTestName": "Test nomi bo'yicha qidirish",
+        "searchFieldPlaceholder": "Test turini qidirish",
+        "searchResultsMatchesForTerm_one": "\"{{searchTerm}}\" uchun {{count}} natija",
+        "searchResultsMatchesForTerm_other": "\"{{searchTerm}}\" uchun {{count}} natija",
+        "searchResultsTextFor_one": "{{searchTerm}} uchun {{count}} qidiruv natijasi",
+        "searchResultsTextFor_other": "{{searchTerm}} uchun {{count}} qidiruv natijalari",
+        "seeAllResults": "Barcha natijalarni ko'rish",
+        "showResultsTable": "Natijalar jadvalini ko'rsatish",
+        "showTree": "Daraxtni ko'rsatish",
+        "startDate": "Boshlanish sanasi",
+        "testName": "Test nomi",
+        "testResults": "test natijalari",
+        "testResults_title": "Test Natijalari",
+        "testResultsData": "Test natijalari ma'lumotlari",
+        "tests": "Testlar",
+        "testType": "Test turi",
+        "timeline": "Vaqt jadvali",
+        "tree": "Daraxt",
+        "trend": "Trend",
+        "trendline": "Trend chizig'i",
+        "trendlineRangeSelector1Day": "1 kun",
+        "trendlineRangeSelector1Month": "1 oy",
+        "trendlineRangeSelector1Year": "1 yil",
+        "trendlineRangeSelector5Days": "5 kun",
+        "trendlineRangeSelector5Years": "5 yil",
+        "trendlineRangeSelectorAll": "Barchasi",
+        "trendlineRangeSelectorMonths": "6 oy",
+        "tryReopeningTheForm": "Iltimos, shaklni qayta ochishga harakat qiling",
+        "trySearchingAgain": "Iltimos, qayta qidirishga harakat qiling",
+        "tryTo": "Harakat qiling",
+        "unknown": "Noma'lum",
+        "usingADifferentTerm": "boshqa atama ishlatish",
+        "value": "Qiymat",
+        "view": "Ko'rish",
+        "viewTimeline": "Vaqt jadvalini ko'rish"
+      }
     }
   },
   "@openmrs/esm-laboratory-app": {
