--- a/frontend/spa-assemble-config.json
+++ b/frontend/spa-assemble-config.json
@@ -14,11 +14,11 @@
     "@openmrs/esm-home-app": "next",
     "@openmrs/esm-implementer-tools-app": "next",
     "@openmrs/esm-laboratory-app": "next",
-    "@openmrs/esm-login-app": "next",
+    "@openmrs/esm-login-app": "openmrs-esm-login-app-6.0.4.tgz",
     "@openmrs/esm-openconceptlab-app": "next",
     "@openmrs/esm-patient-allergies-app": "next",
-    "@openmrs/esm-patient-attachments-app": "next",
-    "@openmrs/esm-patient-banner-app": "next",
+    "@openmrs/esm-patient-attachments-app": "openmrs-esm-patient-attachments-app-9.1.0.tgz",
+    "@openmrs/esm-patient-banner-app": "openmrs-esm-patient-banner-app-9.1.0.tgz",
     "@openmrs/esm-patient-chart-app": "next",
     "@openmrs/esm-patient-conditions-app": "next",
     "@openmrs/esm-patient-flags-app": "next",
@@ -26,14 +26,14 @@
     "@openmrs/esm-patient-immunizations-app": "next",
     "@openmrs/esm-patient-list-management-app": "next",
     "@openmrs/esm-patient-lists-app": "next",
-    "@openmrs/esm-patient-medications-app": "next",
+    "@openmrs/esm-patient-medications-app": "openmrs-esm-patient-medications-app-9.1.0.tgz",
     "@openmrs/esm-patient-notes-app": "next",
-    "@openmrs/esm-patient-orders-app": "next",
+    "@openmrs/esm-patient-orders-app": "openmrs-esm-patient-orders-app-9.1.0.tgz",
     "@openmrs/esm-patient-programs-app": "next",
     "@openmrs/esm-patient-registration-app": "next",
     "@openmrs/esm-patient-search-app": "next",
-    "@openmrs/esm-patient-tests-app": "next",
-    "@openmrs/esm-patient-vitals-app": "next",
+    "@openmrs/esm-patient-tests-app": "openmrs-esm-patient-tests-app-9.1.0.tgz",
+    "@openmrs/esm-patient-vitals-app": "openmrs-esm-patient-vitals-app-9.1.0.tgz",
     "@openmrs/esm-primary-navigation-app": "next",
     "@openmrs/esm-service-queues-app": "next",
     "@openmrs/esm-system-admin-app": "next",
